--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react": "^16.9.53",
     "@types/react-bootstrap": "^0.32.24",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.6",
     "bootstrap": "^4.5.3",
     "react": "^17.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "typescript": "~4.0.3"
   },
