--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.9",
     "@types/bootstrap": "^5.0.0",
+    "@types/country-flag-icons": "^1.2.0",
+    "@types/i18next": "^13.0.0",
+    "@types/i18next-browser-languagedetector": "^3.0.0",
+    "@types/i18next-xhr-backend": "^1.4.2",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.1",
     "@types/react": "^16.9.53",
     "@types/react-bootstrap": "^0.32.24",
     "@types/react-dom": "^16.9.0",
+    "@types/react-i18next": "^8.1.0",
     "@types/react-router-dom": "^5.1.6",
     "bootstrap": "^4.5.3",
+    "country-flag-icons": "^1.2.5",
+    "i18next": "^19.8.3",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "react": "^17.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.0",
+    "react-i18next": "^11.7.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "typescript": "~4.0.3"
